--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,5 +2,7 @@
 # See https://github.com/puppetlabs/puppetlabs_spec_helper#using-fixtures for details
 ---
 fixtures:
-  forge_modules:
-#     stdlib: "puppetlabs/stdlib"
+  repositories:
+    "lsys": "https://github.com/aursu/puppet-lsys"
+  symlinks:
+    "docker": "#{source_dir}"
