--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,70 +1,70 @@
 ---
-docker::version: 'installed'
-docker::repo: 'stable'
-docker::repo_location: 'https://download.docker.com/linux'
-docker::repo_os: ~
-docker::repo_gpgcheck: true
-docker::prerequired_packages: []
-docker::manage_package: true
-docker::package_name: 'docker-ce'
-docker::manage_os_users: true
-docker::docker_users: 'docker'
-docker::docker_group: 'docker'
-docker::manage_service: true
-docker::service_ensure: 'running'
-docker::service_name: 'docker'
-docker::service_enable: true
-docker::service_hasstatus: true
-docker::service_hasrestart: true
-docker::service_overrides_config: '/etc/systemd/system/docker.service.d/service-overrides.conf'
-docker::service_overrides_template: 'docker/etc/systemd/system/docker.service.d/service-overrides.conf.erb'
-docker::service_config: '/etc/sysconfig/docker'
-docker::service_config_template: 'docker/etc/sysconfig/docker.systemd.erb'
-docker::storage_config: '/etc/default/docker-storage'
-docker::storage_config_template: 'docker/etc/sysconfig/docker-storage.erb'
-docker::root_dir: ~
-docker::tcp_bind: ~
-docker::tls_enable: false
-docker::tls_verify: true
-docker::tls_cacert: '/etc/docker/tls/ca.pem'
-docker::tls_cert: '/etc/docker/tls/cert.pem'
-docker::tls_key: '/etc/docker/tls/key.pem'
-docker::socket_bind: 'unix:///var/run/docker.sock'
-docker::ip_forward: true
-docker::iptables: true
-docker::ip_masq: true
-docker::icc: true
-docker::registry_mirror: ~
-docker::fixed_cidr: ~
-docker::default_gateway: ~
-docker::bridge: ~
-docker::bip: ~
-docker::log_level: ~
-docker::log_driver: ~
-docker::log_opt: ~
-docker::selinux_enabled: false
-docker::socket_group: ~
-docker::dns: ~
-docker::dns_search: ~
-docker::mtu: ~
-docker::labels: ~
-docker::extra_parameters: ~
-docker::proxy: ~
-docker::no_proxy: ~
-docker::tmp_dir: ~
-docker::storage_driver: ~
-docker::dm_basesize: ~
-docker::dm_fs: ~
-docker::dm_mkfsarg: ~
-docker::dm_mountopt: ~
-docker::dm_blocksize: ~
-docker::dm_loopdatasize: ~
-docker::dm_loopmetadatasize: ~
-docker::dm_datadev: ~
-docker::dm_metadatadev: ~
-docker::dm_thinpooldev: ~
-docker::dm_use_deferred_removal: false
-docker::dm_use_deferred_deletion: false
-docker::dm_blkdiscard: true
-docker::dm_override_udev_sync_check: false
-docker::overlay2_override_kernel_check: false
+dockerinstall::version: 'installed'
+dockerinstall::repo: 'stable'
+dockerinstall::repo_location: 'https://download.docker.com/linux'
+dockerinstall::repo_os: ~
+dockerinstall::repo_gpgcheck: true
+dockerinstall::prerequired_packages: []
+dockerinstall::manage_package: true
+dockerinstall::package_name: 'docker-ce'
+dockerinstall::manage_os_users: true
+dockerinstall::docker_users: 'docker'
+dockerinstall::docker_group: 'docker'
+dockerinstall::manage_service: true
+dockerinstall::service_ensure: 'running'
+dockerinstall::service_name: 'docker'
+dockerinstall::service_enable: true
+dockerinstall::service_hasstatus: true
+dockerinstall::service_hasrestart: true
+dockerinstall::service_overrides_config: '/etc/systemd/system/docker.service.d/service-overrides.conf'
+dockerinstall::service_overrides_template: 'docker/etc/systemd/system/docker.service.d/service-overrides.conf.erb'
+dockerinstall::service_config: '/etc/sysconfig/docker'
+dockerinstall::service_config_template: 'docker/etc/sysconfig/docker.systemd.erb'
+dockerinstall::storage_config: '/etc/default/docker-storage'
+dockerinstall::storage_config_template: 'docker/etc/sysconfig/docker-storage.erb'
+dockerinstall::root_dir: ~
+dockerinstall::tcp_bind: ~
+dockerinstall::tls_enable: false
+dockerinstall::tls_verify: true
+dockerinstall::tls_cacert: '/etc/docker/tls/ca.pem'
+dockerinstall::tls_cert: '/etc/docker/tls/cert.pem'
+dockerinstall::tls_key: '/etc/docker/tls/key.pem'
+dockerinstall::socket_bind: 'unix:///var/run/docker.sock'
+dockerinstall::ip_forward: true
+dockerinstall::iptables: true
+dockerinstall::ip_masq: true
+dockerinstall::icc: true
+dockerinstall::registry_mirror: ~
+dockerinstall::fixed_cidr: ~
+dockerinstall::default_gateway: ~
+dockerinstall::bridge: ~
+dockerinstall::bip: ~
+dockerinstall::log_level: ~
+dockerinstall::log_driver: ~
+dockerinstall::log_opt: ~
+dockerinstall::selinux_enabled: false
+dockerinstall::socket_group: ~
+dockerinstall::dns: ~
+dockerinstall::dns_search: ~
+dockerinstall::mtu: ~
+dockerinstall::labels: ~
+dockerinstall::extra_parameters: ~
+dockerinstall::proxy: ~
+dockerinstall::no_proxy: ~
+dockerinstall::tmp_dir: ~
+dockerinstall::storage_driver: ~
+dockerinstall::dm_basesize: ~
+dockerinstall::dm_fs: ~
+dockerinstall::dm_mkfsarg: ~
+dockerinstall::dm_mountopt: ~
+dockerinstall::dm_blocksize: ~
+dockerinstall::dm_loopdatasize: ~
+dockerinstall::dm_loopmetadatasize: ~
+dockerinstall::dm_datadev: ~
+dockerinstall::dm_metadatadev: ~
+dockerinstall::dm_thinpooldev: ~
+dockerinstall::dm_use_deferred_removal: false
+dockerinstall::dm_use_deferred_deletion: false
+dockerinstall::dm_blkdiscard: true
+dockerinstall::dm_override_udev_sync_check: false
+dockerinstall::overlay2_override_kernel_check: false
