--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -116,3 +116,5 @@ Style/FrozenStringLiteralComment:
   EnforcedStyle: never
 Style/MixinUsage:
   Enabled: false
+Style/SignalException:
+  EnforcedStyle: semantic
