Fixed pdk validate warnings

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -6,7 +6,7 @@ fixtures:
      stdlib: "puppetlabs/stdlib"
      puppet_agent: "puppetlabs/puppet_agent"
   repositories:
-    "lsys": "https://github.com/aursu/puppet-lsys"
+    lsys: "https://github.com/aursu/puppet-lsys"
     yumrepo_core:
       repo: https://github.com/puppetlabs/puppetlabs-yumrepo_core.git
       puppet_version: ">= 6.0.0"
