Switch to camptocamp/systemd

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,11 +3,13 @@
 ---
 fixtures:
   forge_modules:
-     stdlib: "puppetlabs/stdlib"
-     puppet_agent: "puppetlabs/puppet_agent"
-     apt: 'puppetlabs/apt'
+    stdlib: "puppetlabs/stdlib"
+    puppet_agent: "puppetlabs/puppet_agent"
+    apt: "puppetlabs/apt"
+    systemd:
+      repo: "camptocamp/systemd"
+      ref: "2.9.0"
   repositories:
-    lsys: "https://github.com/aursu/puppet-lsys"
     yumrepo_core:
       repo: https://github.com/puppetlabs/puppetlabs-yumrepo_core.git
       puppet_version: ">= 6.0.0"
