Added token authentication

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,7 +3,9 @@
 ---
 fixtures:
   forge_modules:
-    apt: "puppetlabs/apt"
+    apt:
+      repo: puppetlabs/apt
+      ref: 7.5.0
     concat:
       repo: "puppetlabs/concat"
       ref: "6.2.0"
@@ -20,15 +22,19 @@ fixtures:
       repo: "camptocamp/systemd"
       ref: "2.9.0"
   repositories:
-    lsys: "https://github.com/aursu/puppet-lsys.git"
+    lsys:
+      repo: https://github.com/aursu/puppet-lsys.git
+      ref: tags/v0.5.3
     nginx:
-      repo: "https://github.com/aursu/puppet-nginx.git"
-      ref: "tags/v1.1.1-rc0.5"
-    puppet: "https://github.com/aursu/puppet-puppet.git"
+      repo: https://github.com/aursu/puppet-nginx.git
+      ref: tags/v1.1.1-rc0.7
+    puppet:
+      repo: https://github.com/aursu/puppet-puppet.git
     selinux_core:
       repo: https://github.com/puppetlabs/puppetlabs-selinux_core.git
       puppet_version: ">= 6.0.0"
-    tlsinfo: "https://github.com/aursu/puppet-tlsinfo.git"
+    tlsinfo:
+      repo: https://github.com/aursu/puppet-tlsinfo.git
     yumrepo_core:
       repo: https://github.com/puppetlabs/puppetlabs-yumrepo_core.git
       puppet_version: ">= 6.0.0"
