--- a/data/common.yaml
+++ b/data/common.yaml
@@ -36,11 +36,13 @@ dockerinstall::manage_docker_tlsdir: true
 dockerinstall::docker_dir_ensure: directory
 dockerinstall::manage_os_users: true
 dockerinstall::manage_package: true
+dockerinstall::manage_cli: true
+dockerinstall::cli_package_name: 'docker-ce'
 dockerinstall::manage_service: true
 dockerinstall::mtu: ~
 dockerinstall::no_proxy: ~
 dockerinstall::overlay2_override_kernel_check: false
-dockerinstall::package_name: 'docker-ce'
+dockerinstall::package_name: 'docker-ce-cli'
 dockerinstall::prerequired_packages: []
 dockerinstall::proxy: ~
 dockerinstall::registry_mirror: ~
