--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -5,36 +5,36 @@ fixtures:
   forge_modules:
     apt:
       repo: puppetlabs/apt
-      ref: 7.5.0
+      ref: 8.3.0
     concat:
       repo: "puppetlabs/concat"
-      ref: "6.2.0"
+      ref: "7.1.1"
     puppet_agent:
       repo: "puppetlabs/puppet_agent"
-      ref: "4.0.0"
+      ref: "4.9.0"
     selinux:
       repo: "puppet/selinux"
-      ref: "3.2.0"
+      ref: "3.4.1"
+    selinux_core:
+      repo: puppetlabs/selinux_core
+      puppet_version: ">= 6.0.0"
     stdlib:
       repo: "puppetlabs/stdlib"
-      ref: "6.3.0"
+      ref: "8.1.0"
     systemd:
-      repo: "camptocamp/systemd"
-      ref: "2.9.0"
+      repo: "puppet/systemd"
+      ref: "3.5.1"
+    yumrepo_core:
+      repo: puppetlabs/yumrepo_core
+      puppet_version: ">= 6.0.0"
   repositories:
     lsys:
       repo: https://github.com/aursu/puppet-lsys.git
-      ref: tags/v0.5.4
+      ref: tags/v0.24.3
     nginx:
       repo: https://github.com/aursu/puppet-nginx.git
-      ref: tags/v2.0.1-rc0.4
+      ref: tags/v3.3.1-rc0.4
     puppet:
       repo: https://github.com/aursu/puppet-puppet.git
-    selinux_core:
-      repo: https://github.com/puppetlabs/puppetlabs-selinux_core.git
-      puppet_version: ">= 6.0.0"
     tlsinfo:
       repo: https://github.com/aursu/puppet-tlsinfo.git
-    yumrepo_core:
-      repo: https://github.com/puppetlabs/puppetlabs-yumrepo_core.git
-      puppet_version: ">= 6.0.0"
