--- a/.puppet-lint.rc
+++ b/.puppet-lint.rc
@@ -1,2 +1,2 @@
 --no-parameter_documentation-check
---ignore-paths=.vendor/**/*.pp,.bundle/**/*.pp,pkg/**/*.pp,spec/**/*.pp,tests/**/*.pp,types/**/*.pp,vendor/**/*.pp
+--ignore-paths=.vendor/**/*.pp,.bundle/**/*.pp,pkg/**/*.pp,spec/**/*.pp,tests/**/*.pp
